--- a/html/supporters/Quosentis.html
+++ b/html/supporters/Quosentis.html
@@ -57,8 +57,8 @@ crossorigin=""/>
     Insert text here
   </p>
   <p>
-    <b>This company also commercialize : </b>
-    <ul>
+    <b><span lang="fr">Cette société commercialise également : </span><span lang="en">This company also market : </span></b>
+    <ul style="font-size: 0.7em;">
 
       <li>
         <h4>
