--- a/html/supporters/Quosentis.html
+++ b/html/supporters/Quosentis.html
@@ -50,15 +50,21 @@ crossorigin=""/>
     <b>CONTACT :</b>  Julie ROCHON
     <br>
     <b>MAIL :</b>  <a HREF="mailto:contact@quosentis.com">contact@quosentis.com</a>
+    <span>
+      <b><span lang="fr">Site internet :</span><span lang="en">Website :</span></b>
+      <a class="interpop" href="https://www.quosentis.com" target="_blank">www.quosentis.com</a>
+    </span>
     <br>
-    <b>WEBSITE :</b> <a href="https://www.quosentis.com" target="_blank">www.quosentis.com</a>
+    <span>
+      <b><span lang="fr">Téléphone :</span><span lang="en">Phone :</span></b> (+33)06 29 58 73 79
+    </span>
   </p>
   <p style="font-size: 1.2em;">
     Insert text here
   </p>
-  <p>
+  <p style="font-size: 0.7em;">
     <b><span lang="fr">Cette société commercialise également : </span><span lang="en">This company also market : </span></b>
-    <ul style="font-size: 0.7em;">
+    <ul style="font-size: 1em;">
 
       <li>
         <h4>
