--- a/html/supporters/Quosentis.html
+++ b/html/supporters/Quosentis.html
@@ -49,20 +49,16 @@ crossorigin=""/>
   <p style="font-size: 1em;">
     <b>CONTACT :</b>  Julie ROCHON
     <br>
-    <b>MAIL :</b>  <a HREF="mailto:contact@quosentis.com">contact@quosentis.com</a>
-    <span>
-      <b><span lang="fr">Site internet :</span><span lang="en">Website :</span></b>
-      <a class="interpop" href="https://www.quosentis.com" target="_blank">www.quosentis.com</a>
-    </span>
+    <b>MAIL :</b> <a class="interpop" HREF="mailto:contact@quosentis.com">contact@quosentis.com</a>
     <br>
-    <span>
-      <b><span lang="fr">Téléphone :</span><span lang="en">Phone :</span></b> (+33)06 29 58 73 79
-    </span>
+    <b><span lang="fr">Site internet :</span><span lang="en">Website :</span></b><a class="interpop" href="https://www.quosentis.com" target="_blank">www.quosentis.com</a>
+    <br>
+    <b><span lang="fr">Téléphone :</span><span lang="en">Phone :</span></b> (+33)06 29 58 73 79 </span>
   </p>
   <p style="font-size: 1.2em;">
     Insert text here
   </p>
-  <p style="font-size: 0.7em;">
+  <p style="font-size: 1em;">
     <b><span lang="fr">Cette société commercialise également : </span><span lang="en">This company also market : </span></b>
     <ul style="font-size: 1em;">
 
