--- a/html/supporters/Quosentis.html
+++ b/html/supporters/Quosentis.html
@@ -47,9 +47,9 @@ crossorigin=""/>
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-9">
   <p style="font-size: 1em;">
-    <b>CONTACT :</b>  Julie ROCHON
+    <b>Contact :</b>  Julie ROCHON
     <br>
-    <b>MAIL :</b> <a class="interpop" HREF="mailto:contact@quosentis.com">contact@quosentis.com</a>
+    <b>Mail :</b> <a class="interpop" HREF="mailto:contact@quosentis.com">contact@quosentis.com</a>
     <br>
     <b><span lang="fr">Site internet :</span><span lang="en">Website :</span></b><a class="interpop" href="https://www.quosentis.com" target="_blank">www.quosentis.com</a>
     <br>
@@ -63,12 +63,10 @@ crossorigin=""/>
     <ul style="font-size: 1em;">
 
       <li>
-        <h4>
           <a class="interpop" href="../ingredients/Benzyl_Acetate__Acétate_de_Benzyle.html" target="_BLANK">
           <span lang="fr">Acétate de Benzyle (N°Cas : 140-11-4)</span>
           <span lang="en">Benzyl Acetate (N°Cas : 140-11-4)</span>
           </a>
-        </h4>
       </li>
       <li>
         <h4>
