--- a/html/supporters/Quosentis.html
+++ b/html/supporters/Quosentis.html
@@ -60,8 +60,7 @@ crossorigin=""/>
   </p>
   <p style="font-size: 1em;">
     <b><span lang="fr">Cette société commercialise également : </span><span lang="en">This company also market : </span></b>
-    <ul style="font-size: 1em;">
-
+    <ul style="padding-top: 0; margin-top: 0;">
       <li>
           <a class="interpop" href="../ingredients/Benzyl_Acetate__Acétate_de_Benzyle.html" target="_BLANK">
           <span lang="fr">Acétate de Benzyle (N°Cas : 140-11-4)</span>
