--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1901,7 +1901,7 @@ crossorigin=""/>
             <span lang="en" class="mb-0">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
           </p>
         </div>
-        <div class="commercialize col-12"><b>
+        <div class="commercialize col-12 m-0 p-0"><b>
           <span lang="fr">Ils commercialisent cet ingrédient : </span>
           <span lang="en">They sell this ingredient : </span>
         </b></div>
