--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1031,12 +1031,12 @@ crossorigin=""/>
         <span lang="en" class="mb-0">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
       </p>
     </div>
-    <div class="commercialize col-12">
+    <!--<div class="commercialize col-12">
       <b>
           <span lang="fr">Ils commercialisent cet ingrédient : </span>
           <span lang="en">They sell this ingredient : </span>
       </b>
-    </div>
+    </div>-->
     <div class="pro_informations_naturals col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"></div>
    </div>
    </div>
