--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -176,14 +176,28 @@ crossorigin=""/>
 <div class="timeline col-12 mt-4">
     <ul>
       <li>
-      	<div class="content">
+        <div class="content">
+          <h2 id="heading22"><span lang="fr">21 juin 2020</span><span lang="en">21<sup>st</sup> june 2020</span></h2>
+          <p>
+              <span lang="fr">Quosentis rejoint ScenTree avec le sponsoring de 30 ingrédients ! Merci ! </span>
+              <span lang="en">Quosentis joins ScenTree with the sponsorship of 30 materials! Thank you!</span>
+          </p>
+          <p>
+            <a class="btn col-6 logostandards" role="button" href="../supporters/Quosentis.html">
+            <img class="img-fluid boutonclickable" src="../img/sponsors/Quosentis.png" alt="le logo de Quosentis">
+          </a>
+          </p>
+        </div>
+       </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">15 juin 2020</span><span lang="en">15<sup>th</sup> june 2020</span></h2>
           <p>
               <span lang="fr">L'ISIPCA devient le premier sponspor de ScenTree ! Merci ! </span>
               <span lang="en">ISIPCA school became the first sponsor of ScenTree ! Thanks ! </span>
           </p>
           <p>
-          	<a class="btn col-6 logostandards" role="button" href="../supporters/ISIPCA.html">
+            <a class="btn col-6 logostandards" role="button" href="../supporters/ISIPCA.html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/isipca.png" alt="le logo d'ISIPCA'">
           </a>
           </p>
