--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -179,11 +179,13 @@ crossorigin=""/>
         <div class="content">
           <h2 id="heading22"><span lang="fr">21 juin 2020</span><span lang="en">21<sup>st</sup> june 2020</span></h2>
           <p>
-            <a><span lang="fr">Quosentis rejoint ScenTree ! Merci ! </span>
-              <span lang="en">Quosentis joins ScenTree! Thank you!</span></a>
+            <span lang="fr">Quosentis rejoint ScenTree ! Merci ! </span>
+            <span lang="en">Quosentis joins ScenTree! Thank you!</span>
+          </p>
+          <p>
             <a class="btn col-6 logostandards" role="button" href="../supporters/Quosentis.html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Quosentis.png" alt="le logo de Quosentis">
-          </a>
+            </a>
           </p>
         </div>
        </li>
