--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -187,6 +187,17 @@ crossorigin=""/>
             <img class="img-fluid boutonclickable" src="../img/sponsors/Quosentis.png" alt="le logo de Quosentis">
             </a>
           </p>
+          <p>
+              <span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
+              <br><a class="interpop"  href="../ingredients/Methyl_2-Furoate__2-Furoate_de_méthyle.html"><span lang="en">Methyl 2-Furoate (CAS N°: 611-13-2)</span><span lang="fr">2-Furoate de méthyle (CAS N°: 611-13-2)</span></a>
+              <br><a class="interpop"  href="../ingredients/Farnesyl_Acetate__Acétate_de_Farnesyl.html"><span lang="en">Farnesyl Acetate (CAS N°: 29548-30-9)</span><span lang="fr">Acétate de Farnesyl (CAS N°: 29548-30-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Isoamyl_Alcohol__Alcool_Isoamylique.html"><span lang="en">Isoamyl Alcohol (CAS N°: 123-51-3)</span><span lang="fr">Alcool Isoamylique (CAS N°: 123-51-3)</span></a>
+              <br><a class="interpop"  href="../ingredients/Apritone®__Apritone®.html"><span lang="en">Apritone<sup>®</sup> (CAS N°: 68133-79-9)</span><span lang="fr">Apritone<sup>®</sup> (CAS N°: 68133-79-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Cardamom_Absolute__Cardamome_Absolue.html"><span lang="en">Cardamom Absolute (CAS N°: 85940-32-5)</span><span lang="fr">Cardamome Absolue (CAS N°: 85940-32-5)</span></a>
+              <br><a class="interpop"  href="../ingredients/Ethyl_Octanoate__Octanoate d_Ethyle.html"><span lang="en">Ethyl Octanoate (CAS N°: 106-32-1)</span><span lang="fr">Octanoate d'Ethyle (CAS N°: 106-32-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Parmavert®__Parmavert®.html"><span lang="en">Parmavert<sup>®</sup> (CAS N°: 13257-44-8)</span><span lang="fr">Parmavert<sup>®</sup> (CAS N°: 13257-44-8)</span></a>
+              <br><a class="interpop"  href="../ingredients/Labrador_Tea_EO__Thé_du_Labrador_HE.html"><span lang="en">Labrador Tea EO (CAS N°: 93384-25-9)</span><span lang="fr">Thé du Labrador HE (CAS N°: 93384-25-9)</span></a>
+          </p>
         </div>
        </li>
       <li>
@@ -205,7 +216,9 @@ crossorigin=""/>
        </li>
        <li>
         <div class="content">
-          <h2 id="heading22"><span lang="fr">31 mai 2020</span><span lang="en">31<sup>st</sup> may 2020</span></h2>
+          <h2 id="heading22"><span lang="fr">31 mai 2020</span><span lang="en">31<sup>st</sup> may 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
+          </h2>
           <p>
               <a class="interpop"  href="../ingredients/Costus_Oliffac®__Costus_Oliffac®.html"><span lang="en">Costus Oliffac<sup>®</sup> (CAS N°: BASE)</span><span lang="fr">Costus Oliffac<sup>®</sup> (CAS N°: BASE)</span></a>
               <br><a class="interpop"  href="../ingredients/Aldehyde_Citron®__Aldéhyde_Citron®.html"><span lang="en">Aldehyde Citron<sup>®</sup> (CAS N°: BASE)</span><span lang="fr">Aldéhyde Citron<sup>®</sup> (CAS N°: BASE)</span></a>
@@ -220,7 +233,9 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h2 id="heading22"><span lang="fr">24 mai 2020</span><span lang="en">24<sup>th</sup> may 2020</span></h2>
+          <h2 id="heading22"><span lang="fr">24 mai 2020</span><span lang="en">24<sup>th</sup> may 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 4 nouvelles matières premières</span><span lang="en" class="ajoutMP">4 new ingredients added </span>
+          </h2>
           <p>
               <a class="interpop"  href="../ingredients/Amyl_Acetate__Acétate_d_Amyle.html"><span lang="en">Amyl Acetate (CAS N°: 628-63-7)</span><span lang="fr">Acétate d'Amyle (CAS N°: 628-63-7)</span></a>
               <br><a class="interpop"  href="../ingredients/Prenyl_Acetate__Acétate_de_Prényle.html"><span lang="en">Prenyl Acetate (CAS N°: 1191-16-8)</span><span lang="fr">Acétate de Prényle (CAS N°: 1191-16-8)</span></a>
