--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -188,7 +188,7 @@ crossorigin=""/>
             </a>
           </p>
           <p>
-              <span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
+              <span lang="fr" class="ajoutMP" style="font-size: 1em;">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
               <br><a class="interpop"  href="../ingredients/Methyl_2-Furoate__2-Furoate_de_méthyle.html"><span lang="en">Methyl 2-Furoate (CAS N°: 611-13-2)</span><span lang="fr">2-Furoate de méthyle (CAS N°: 611-13-2)</span></a>
               <br><a class="interpop"  href="../ingredients/Farnesyl_Acetate__Acétate_de_Farnesyl.html"><span lang="en">Farnesyl Acetate (CAS N°: 29548-30-9)</span><span lang="fr">Acétate de Farnesyl (CAS N°: 29548-30-9)</span></a>
               <br><a class="interpop"  href="../ingredients/Isoamyl_Alcohol__Alcool_Isoamylique.html"><span lang="en">Isoamyl Alcohol (CAS N°: 123-51-3)</span><span lang="fr">Alcool Isoamylique (CAS N°: 123-51-3)</span></a>
