--- a/html/supporters/ISIPCA.html
+++ b/html/supporters/ISIPCA.html
@@ -50,7 +50,7 @@ crossorigin=""/>
   <p>
     <span>
     	<b><span lang="fr">Site internet :</span><span lang="en">Website :</span></b>
-    	<a class="interpop" href="www.isipca.fr" target="_blank">www.isipca.fr</a>
+    	<a class="interpop" href="https://www.isipca.fr" target="_blank">www.isipca.fr</a>
     </span>
     <br>
     <span>
