--- a/html/_/index.html
+++ b/html/_/index.html
@@ -575,7 +575,7 @@ crossorigin=""/>
 <div class="row">
 <div class="col-12 panelcontent">
     <div class="mt-1" style="text-align: justify;">
-      <span lang="fr">Afin de vous permettre d'en découvrir d'avantage sur les ingrédients de ScenTree, nous nous sommes associé avec l'emblématique société "<a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a>". Ce partenariat nous permet de vous afficher, pour chaque ingrédient, jusqu'a 8 parfums emblématiques ! </span>
+      <span lang="fr">Afin de vous permettre d'en découvrir d'avantage sur les ingrédients de ScenTree, nous nous sommes associé avec l'emblématique société "<a href="../supporters/cinquieme_sens.html">Cinquième Sens</a>". Ce partenariat nous permet de vous afficher, pour chaque ingrédient, jusqu'a 8 parfums emblématiques ! </span>
       <span lang="en">To allow you to discover more about ScenTree's ingredients, we have partnered with the iconic company "<a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a>". This partnership allows us to show you, for each ingredient, up to 8 emblematic fragrances! </span>
     </div>
     <!--VERSION MOBILE-->
@@ -594,7 +594,7 @@ crossorigin=""/>
           <span class="perfumeurdetails">PERFUMER</span>
         </div>
       </div>
-      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
         <div class = "detailsmini col-6">
@@ -609,7 +609,7 @@ crossorigin=""/>
           <span class="perfumeurdetails">PERFUMER</span>
         </div>
       </div>
-      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
         <div class = "detailsmini col-6">
@@ -624,7 +624,7 @@ crossorigin=""/>
           <span class="perfumeurdetails">PERFUMER</span>
         </div>
       </div>
-      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
         <div class = "detailsmini col-6">
@@ -639,7 +639,7 @@ crossorigin=""/>
           <span class="perfumeurdetails">PERFUMER</span>
         </div>
       </div>
-      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
         <div class = "detailsmini col-6">
@@ -654,7 +654,7 @@ crossorigin=""/>
           <span class="perfumeurdetails">PERFUMER</span>
         </div>
       </div>
-      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
         <div class = "detailsmini col-6">
@@ -669,7 +669,7 @@ crossorigin=""/>
           <span class="perfumeurdetails">PERFUMER</span>
         </div>
       </div>
-      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
         <div class = "detailsmini col-6">
@@ -684,7 +684,7 @@ crossorigin=""/>
           <span class="perfumeurdetails">PERFUMER</span>
         </div>
       </div>
-      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
         <div class = "detailsmini col-6">
@@ -699,7 +699,7 @@ crossorigin=""/>
           <span class="perfumeurdetails">PERFUMER</span>
         </div>
       </div>
-      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Cinquième Sens</a></div>
     </div>
 
   
@@ -765,10 +765,10 @@ crossorigin=""/>
         </div> 
       </div>
       <div class="row mt-1 mb-0">
-        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
-        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
-        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
-        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Cinquième Sens</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Cinquième Sens</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Cinquième Sens</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Cinquième Sens</a></div>
       </div>
       <!--2ème ligne-->
       <div class = "mt-5 row">
@@ -830,10 +830,10 @@ crossorigin=""/>
         </div>  
       </div>
       <div class="row mt-1 mb-0">
-        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
-        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
-        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
-        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Cinquième Sens</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Cinquième Sens</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Cinquième Sens</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Cinquième Sens</a></div>
       </div>
     </div>
 </div>
